--- a/src/components/NavbarSearch/NavbarSearch.css
+++ b/src/components/NavbarSearch/NavbarSearch.css
@@ -3,7 +3,6 @@
   position: relative;
   display: flex;
   align-items: center;
-  background: var(--muted-bg);
   border-radius: 10px;
   height: 44px;
   border: 1px solid transparent;
@@ -11,15 +10,18 @@
   flex: 1;
   max-width: 1000px;
   overflow: visible;
+  z-index: 10;
 }
 
 .search-section {
-  position: absolute;
+  position: relative;
   display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
-  background: transparent;
+  background: var(--muted-bg);
+  border: 2px solid transparent;
+  border-bottom: none;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -27,6 +29,7 @@
 .search-section:focus-within {
   border-radius: 10px 10px 0 0;
   border: 2px solid var(--accent-color);
+  border-bottom: none;
 }
 
 .search-section select {
@@ -73,10 +76,21 @@
   color: #fff;
 }
 
+.search-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  cursor: pointer;
+}
+
 .search-wrapper .search-hint {
   position: absolute;
   top: 100%;
-  left: 0px;
+  left: 0;
   width: 100%;
   background: #fff;
   border: 2px solid var(--accent-color);
